--- a/css/style.css
+++ b/css/style.css
@@ -60,16 +60,20 @@ form, .options {
 }
 
 input {
-  height: 8vw;
+  height: 30px;
   font-family: var(--fontBase);
-  font-size: 4vw;
+  font-size: 1.5rem;
   border: none;
   border-radius: 2vw;
   padding-inline: 10px;
   background-color: rgba(255,255,255, 0.4);
   color: white;
   outline: none;
-  margin-block-end: 10px;
+  margin-block-end: 20px;
+}
+
+input::placeholder {
+  color: rgba(255, 255, 255, 0.3);
 }
 
 button {
@@ -82,7 +86,16 @@ button {
   border-radius: 1vw;
   color: white;
   font-weight: bold;
-  margin-block-end: 10px;
+  margin-block-end: 20px;
+}
+
+.begin,
+.stop {
+  height: 30px;
+  padding-block: 5px;
+  padding-inline: 10px;
+  margin-inline: 10px;
+  font-size: 1.5rem;
 }
 
 button:hover {
@@ -141,6 +154,21 @@ small {
     padding-block: 2vw;
     padding-inline: 2vw;
     font-size: 2.6vw;
+  }
+
+  input {
+    height: 40px;
+    font-size: 1.6rem;
+    width: 350px
+  }
+
+  .begin,
+  .stop {
+    height: 40px;
+    padding-block: 12px;
+    padding-inline: 20px;
+    margin-inline: 20px;
+    font-size: 1.6rem;
   }
 }
 
