--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
 }
 
 .container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 100vh;
